--- a/src/components/RenameResult/RenameResult.module.scss
+++ b/src/components/RenameResult/RenameResult.module.scss
@@ -1,10 +1,12 @@
 .rename_result {
   height: 100%;
-  flex: 4;
+  width: 100%;
+
+  overflow: auto;
 
   border-radius: 1rem;
   box-shadow: 0rem 0rem 0.5rem rgba(0, 0, 0, 0.2);
 
   background-color: var(--background-light);
-  padding: 2rem;
+  padding: 1rem;
 }
