--- a/src/components/Dropdown/Dropdown.module.scss
+++ b/src/components/Dropdown/Dropdown.module.scss
@@ -1,8 +1,9 @@
 .dropzone {
   height: 100%;
   width: 100%;
-
-  flex: 4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   border-radius: 1rem;
 
@@ -10,4 +11,21 @@
 
   background-color: var(--background-light);
   padding: 2rem;
+
+  .dropzoneCenter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    img {
+      height: 8rem;
+      width: auto;
+      margin: 0 auto;
+      opacity: 0.2;
+      margin-bottom: 2rem;
+    }
+
+    p {
+      font-size: 1.75rem;
+    }
+  }
 }
