--- a/src/screens/Settings/Settings.module.scss
+++ b/src/screens/Settings/Settings.module.scss
@@ -1,6 +1,7 @@
 .settings {
   display: flex;
   height: 85vh;
+  width: 100%;
 
   .core {
     padding: 2rem;
@@ -10,15 +11,33 @@
       margin-bottom: 2rem;
       font-size: 3rem;
     }
-
-    .flex {
-      display: flex;
-      height: 100%;
-      justify-content: space-between;
-    }
   }
 
   .form {
+    width: 100%;
     padding: 2rem 0;
+
+    & .formGroup {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 2rem;
+
+      input {
+        max-width: 70%;
+        flex-grow: 1;
+        font-size: 1.5rem;
+        padding: 0.25rem 1rem;
+      }
+
+      label {
+        margin-right: 2rem;
+        font-size: 1.4rem;
+      }
+
+      button {
+        min-width: 5rem;
+      }
+    }
   }
 }
