--- a/src/screens/Settings/Settings.module.scss
+++ b/src/screens/Settings/Settings.module.scss
@@ -17,6 +17,10 @@
     width: 100%;
     padding: 2rem 0;
 
+    span {
+      width: 25rem;
+    }
+
     & .formGroup {
       display: flex;
       align-items: center;
@@ -28,15 +32,43 @@
         flex-grow: 1;
         font-size: 1.5rem;
         padding: 0.25rem 1rem;
+        flex: 2;
+        max-width: 75%;
       }
 
       label {
-        margin-right: 2rem;
-        font-size: 1.4rem;
+        width: 100%;
+
+        display: flex;
+        justify-content: space-between;
+
+        & > * {
+          font-size: 1.4rem;
+        }
       }
 
       button {
         min-width: 5rem;
+      }
+    }
+
+    & .mapping {
+      width: 100%;
+
+      span {
+        font-size: 1.4rem;
+      }
+
+      & div {
+        display: flex;
+        justify-content: flex-end;
+        flex: 1;
+        max-width: 75%;
+
+        & input {
+          max-width: 100%;
+          flex-grow: 1;
+        }
       }
     }
   }
