--- a/src/globals.css
+++ b/src/globals.css
@@ -1,3 +1,38 @@
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/font/Roboto-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/font/Roboto-Light.ttf');
+  font-weight: lighter;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/font/Roboto-Medium.ttf');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/font/Roboto-Bold.ttf');
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'roboto';
+  src: url('../assets/font/Roboto-Italic.ttf');
+  font-weight: normal;
+  font-style: italic;
+}
+
 *,
 *::before,
 *::after {
@@ -7,19 +42,18 @@
 }
 
 :root {
-  --primary: #7761CD;
-  --background-primary: #F5F7FB;
-  --background-light: #F9FAFF;
-  --text-normal: #4c4b53;
-  --text-title: #555072;
-  --buttons: #755FCD;
-  --button-secondary: #EBEFF6;
+  --text-primary: #f2f1f5;
+  --text-secondary: #626368;
+  --text-tertiary: #403f46;
+  --bg-darker: #131217;
+  --bg: #191a1f;
+  --bg-ui-primary: #1c81f3;
 }
 
 html {
   font-size: 62.5%;
 
-  background-color: var(--background-primary);
+  font-family: 'roboto', sans-serif;
+  background-color: var(--bg);
   color: var(--text-normal);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
