--- a/src/components/FileListItem/FileListItem.module.scss
+++ b/src/components/FileListItem/FileListItem.module.scss
@@ -4,26 +4,33 @@
   display: flex;
   align-items: center;
 
+  background-color: var(--bg);
+  border-radius: 0.5rem;
+
   padding: 1rem 0;
+  margin-bottom: 1rem;
 
-  img {
-    width: 2rem;
-    height: 2rem;
-
-    opacity: 0.25;
+  svg {
+    width: 2.3rem;
+    height: 1.8rem;
     transform: rotate(-45deg) scale(1.64);
+    margin: 0 1.5rem 0 1.5rem;
   }
 
   .info {
     padding-left: 1.25rem;
     h4 {
-      font-size: 1.5rem;
+      font-size: 1.2rem;
       margin-right: 1rem;
+      font-weight: bold;
+      color: var(--text-primary);
     }
 
     p {
       font-size: 1rem;
       font-weight: 500;
+      color: var(--text-secondary);
+      margin-bottom: 0.25rem;
     }
   }
 }
