--- a/src/components/FileListItem/FileListItem.module.scss
+++ b/src/components/FileListItem/FileListItem.module.scss
@@ -10,6 +10,15 @@
   padding: 1rem 0;
   margin-bottom: 1rem;
 
+  transition: background-color 0.1s ease-out;
+
+  &.missing_data {
+    cursor: pointer;
+    &:hover {
+      background-color: var(--text-tertiary);
+    }
+  }
+
   svg {
     width: 2.3rem;
     height: 1.8rem;
@@ -31,6 +40,70 @@
       font-weight: 500;
       color: var(--text-secondary);
       margin-bottom: 0.25rem;
+    }
+  }
+
+  .warning {
+    position: relative;
+    .errorIcon {
+      fill: red;
+      transform: rotate(0) scale(1);
+    }
+
+    &:hover {
+      & .hoverErrorDescription {
+        display: block;
+      }
+    }
+
+    .hoverErrorDescription {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: -15rem;
+      z-index: 99;
+      width: 20rem;
+      padding: 1rem;
+      background-color: var(--bg);
+      border-radius: 0.5rem;
+      color: var(--text-primary);
+      font-size: 1.15rem;
+      font-weight: 500;
+
+      border: solid 1px var(--bg-ui-primary);
+
+      box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
+
+      p {
+        width: 100%;
+        margin-bottom: 0.5rem;
+      }
+
+      ul {
+        margin-right: 1rem;
+        padding: 0;
+        list-style: decimal;
+        margin-bottom: 1.5rem;
+        width: 100%;
+
+        li {
+          font-weight: 300;
+          width: 100%;
+          margin-left: 1rem;
+        }
+      }
+
+      button {
+        background-color: var(--bg-ui-primary);
+        border-radius: 0.5rem;
+        border: none;
+        padding: 0.8rem 1rem;
+        color: var(--text-primary);
+        font-weight: 500;
+        font-size: 1.15rem;
+        cursor: pointer;
+        box-shadow: 0.8rem 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
+      }
     }
   }
 }
