--- a/src/screens/Rename/Rename.module.scss
+++ b/src/screens/Rename/Rename.module.scss
@@ -1,20 +1,27 @@
 .renamer {
-  display: flex;
-  height: 85vh;
+  padding: 2rem 0;
+  height: 100%;
 
-  .core {
-    padding: 2rem;
+  h1 {
+    margin-bottom: 2rem;
+    font-size: 3rem;
+    color: var(--text-secondary);
+  }
+
+  .dropFiles {
+    height: 100%;
+    width: 100%;
+    padding: 0 2rem;
+  }
+
+  .convertFiles {
+    height: 100%;
     width: 100%;
 
-    h1 {
-      margin-bottom: 2rem;
-      font-size: 3rem;
-    }
+    display: flex;
 
-    .flex {
-      display: flex;
-      height: 100%;
-      justify-content: space-between;
+    & > * {
+      margin: 0 1.5rem;
     }
   }
 }
