--- a/src/components/RenameControlls/RenameControlls.module.scss
+++ b/src/components/RenameControlls/RenameControlls.module.scss
@@ -1,5 +1,9 @@
-.rename_controlls {
-  height: 100%;
+.renameControlls {
+  position: absolute;
+  z-index: 10;
+  height: 80%;
+  left: 50%;
+  transform: translateX(-50%);
   flex: 1;
 
   display: flex;
@@ -8,11 +12,23 @@
   align-items: center;
   padding: 0 2rem;
 
-  img {
-    width: 3.5rem;
-    height: 3.5rem;
-
-    margin-bottom: 2rem;
+  .confirm,
+  .clear {
     cursor: pointer;
+
+    filter: drop-shadow(0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.5));
+  }
+
+  .confirm {
+    width: 7rem;
+    height: auto;
+    margin-bottom: 1.5rem;
+    fill: var(--bg-ui-primary);
+  }
+
+  .clear {
+    width: 4.5rem;
+    height: auto;
+    fill: var(--text-secondary);
   }
 }
