--- a/src/components/FileListItem/FileListItem.module.scss
+++ b/src/components/FileListItem/FileListItem.module.scss
@@ -28,6 +28,7 @@
 
   .info {
     padding-left: 1.25rem;
+    max-width: 80%;
     h4 {
       font-size: 1.2rem;
       margin-right: 1rem;
@@ -45,14 +46,41 @@
 
   .warning {
     position: relative;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 2rem;
+    width: 2rem;
+    margin-left: auto;
+    margin-right: 1rem;
+
     .errorIcon {
+      display: block;
+      margin: 0;
       fill: red;
       transform: rotate(0) scale(1);
+      cursor: pointer;
+
+      width: 2rem;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      z-index: 99;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
 
     &:hover {
       & .hoverErrorDescription {
         display: block;
+      }
+
+      .info {
+        max-width: 80%;
       }
     }
 
@@ -60,8 +88,8 @@
       display: none;
       position: absolute;
       top: 100%;
-      left: -15rem;
-      z-index: 99;
+      left: -18rem;
+      z-index: 999;
       width: 20rem;
       padding: 1rem;
       background-color: var(--bg);
