--- a/src/components/FileListItem/FileListItem.module.scss
+++ b/src/components/FileListItem/FileListItem.module.scss
@@ -4,6 +4,8 @@
   display: flex;
   align-items: center;
 
+  min-height: 5.5rem;
+
   background-color: var(--bg);
   border-radius: 0.5rem;
 
@@ -19,7 +21,7 @@
     }
   }
 
-  svg {
+  .contentIcon {
     width: 2.3rem;
     height: 1.8rem;
     transform: rotate(-45deg) scale(1.64);
@@ -41,6 +43,26 @@
       font-weight: 500;
       color: var(--text-secondary);
       margin-bottom: 0.25rem;
+    }
+  }
+
+  .statusIcon {
+    display: block;
+    margin: 0;
+    transform: rotate(0) scale(1);
+    cursor: pointer;
+
+    width: 2rem;
+    margin: 0 1.5rem;
+    margin-left: auto;
+
+    &_moving {
+      fill: var(--bg-ui-primary);
+      animation: spin 3s infinite ease-in-out;
+    }
+
+    &_moved {
+      fill: var(--bg-ui-primary);
     }
   }
 
@@ -133,5 +155,14 @@
         box-shadow: 0.8rem 0.5rem 0.5rem rgba(0, 0, 0, 0.25);
       }
     }
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
