--- a/src/components/FilesList/FilesList.module.scss
+++ b/src/components/FilesList/FilesList.module.scss
@@ -2,13 +2,34 @@
   position: relative;
   height: 90%;
   width: 100%;
+  max-width: 45vw;
 
-  overflow: auto;
+  overflow-y: auto;
 
   border-radius: 1rem;
   box-shadow: 0rem 0rem 0.5rem rgba(0, 0, 0, 0.2);
 
   background-color: var(--bg-darker);
+
+  &::-webkit-scrollbar {
+    height: 5px;
+    width: 5px;
+  }
+
+  &::-webkit-scrollbar-track {
+    height: 3px;
+    background: rgb(46, 46, 46);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: rgb(88, 88, 88);
+    border-radius: 5px;
+    width: 10%;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: var(--bg-ui-primary);
+  }
 
   & > div {
     padding: 1rem;
