cleanup: Smaller component & UI position fixes

--- a/src/components/FilesList/FilesList.module.scss
+++ b/src/components/FilesList/FilesList.module.scss
@@ -1,8 +1,10 @@
 .filesList {
   position: relative;
-  height: 90%;
+  height: 100%;
   width: 100%;
   max-width: 45vw;
+
+  margin: 0 1.5rem;
 
   overflow-y: auto;
 
