--- a/src/components/MiniDropzone/MiniDropzone.module.scss
+++ b/src/components/MiniDropzone/MiniDropzone.module.scss
@@ -1,15 +1,14 @@
-.filesListWithDropzone {
-  position: relative;
+.miniDropzone {
   height: 100%;
   width: 100%;
+  margin-top: 1rem;
+  width: 95%;
 
   .addAdditional {
-    position: absolute;
-    z-index: 10;
     height: 5rem;
-    width: calc(200% + 3rem);
+    width: 100%;
     background-color: var(--bg);
-    bottom: 0;
+    border-radius: 1rem;
 
     color: var(--text-secondary);
     font-weight: 500;
@@ -30,6 +29,22 @@
         fill: var(--text-primary);
       }
       color: var(--text-primary);
+      border: solid 2px var(--bg-ui-primary);
+    }
+
+    &.disabled {
+      cursor: not-allowed;
+      opacity: 0.35;
+      outline: none;
+
+      &:hover {
+        svg {
+          fill: var(--text-secondary);
+        }
+
+        color: var(--text-secondary);
+        border: solid 2px var(--bg-darker);
+      }
     }
 
     svg {
