--- a/src/screens/Rename/Rename.module.scss
+++ b/src/screens/Rename/Rename.module.scss
@@ -1,6 +1,6 @@
 .renamer {
   padding: 2rem 0;
-  height: 100%;
+  height: 90vh;
 
   h1 {
     margin-bottom: 2rem;
@@ -9,19 +9,26 @@
   }
 
   .dropFiles {
-    height: 100%;
+    height: 93vh;
     width: 100%;
     padding: 0 2rem;
   }
 
-  .convertFiles {
+  .convert {
     height: 100%;
     width: 100%;
 
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-    & > * {
-      margin: 0 1.5rem;
+    .configRename {
+      margin-top: 7rem;
+      height: 85vh;
+      width: 100%;
+      justify-content: center;
+      display: flex;
     }
   }
 }
